# rocet_flight_logger_utilequ

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  README.md  makefile  openocd.cfg  openocd_stlink_v2.cfg
cfg/: FreeRTOSConfig.h  project_config.h  stm32f1xx_hal_conf.h
user_code/: balance_motionsensor.cpp  balance_motionsensor.h  main.cpp  main.h  mpu6050.cpp  mpu6050.h  mpu6050_defs.h  port_i2c.cpp  port_i2c.h
user_code/bsp/freertos/: rk_freertos_func.cpp
user_code/mk_hardware/: rc_i2c.cpp  rfl_pins.cpp  rk_hardware.cpp  rk_hardware.h  rk_pins.cpp  rk_pins.h
